Working on the profile picture upload bug
